💄 Fix styles from moves container bleeding into sideline component

--- a/frontend/src/components/games/Moves/styles.scss
+++ b/frontend/src/components/games/Moves/styles.scss
@@ -21,7 +21,7 @@
     overflow-y: auto;
   }
 
-  ul {
+  &__moves-list {
     position: absolute;
     inset: 0;
     display: flex;
