--- a/frontend/src/components/games/Sideline/styles.scss
+++ b/frontend/src/components/games/Sideline/styles.scss
@@ -6,6 +6,7 @@
     gap: 1rem;
     flex-wrap: wrap;
     row-gap: 0;
+    padding: 0.25rem;
   }
 
   &__move-group {
